--- a/pockets/miniprogram.button/assets/variables.less
+++ b/pockets/miniprogram.button/assets/variables.less
@@ -3,20 +3,22 @@
 // Button themes
 // -----------------------------
 @button-prefix-cls: ~'@{dora-prefix}-button';
-@button-border-radius: @border-radius-base;
 @button-block-margin: 10px;
 @button-opacity-hover: .3;
 @button-opacity-disabled: .4;
 @button-default-border: transparent;
 
+@button-border-radius-base: @border-radius-base;
 @button-font-size-base: @font-size-lg;
 @button-height-base: 44px;
 @button-padding-base: 12px;
 
+@button-border-radius-lg: @border-radius-lg;
 @button-font-size-lg: 20px;
 @button-height-lg: 59px;
 @button-padding-lg: 16px;
 
+@button-border-radius-sm: @border-radius-sm;
 @button-font-size-sm: 12px;
 @button-height-sm: 30px;
 @button-padding-sm: 4px;
