--- a/pockets/miniprogram.pagination/proscenium/pages/index/index.wxml
+++ b/pockets/miniprogram.pagination/proscenium/pages/index/index.wxml
@@ -1,33 +1,47 @@
-<view class="page" data-dora-theme="auto">
-  <view class="page__hd">
-    <view class="page__title">Pagination</view>
-    <view class="page__desc">分页器</view>
-  </view>
-  <view class="page__bd page__bd--spacing">
-    <view class="page__sub-title">Button with text</view>
+<demo-page
+  darkmode="auto"
+  title="Pagination"
+  desc="分页器"
+  clickable
+>
+  <demo-block align="unset" title="Button with text">
+    <block>
       <dora-pagination defaultCurrent="1" total="5" bind:prev="onPrev" bind:next="onNext">
         <view slot="prev">Prev</view>
         <view slot="next">Next</view>
       </dora-pagination>
-      <view class="page__sub-title">Controlled</view>
+    </block>
+  </demo-block>
+  <demo-block align="unset" title="Controlled">
+    <block>
       <dora-pagination current="{{ current }}" total="5" mode="button" controlled bind:change="onChange">
         <view slot="prev">Prev</view>
         <view slot="next">Next</view>
       </dora-pagination>
-      <view class="page__sub-title">Hide number</view>
+    </block>
+  </demo-block>
+  <demo-block align="unset" title="Hide number">
+    <block>
       <dora-pagination defaultCurrent="1" total="5" simple>
         <view slot="prev">Prev</view>
         <view slot="next">Next</view>
       </dora-pagination>
-      <view class="page__sub-title">Show number only</view>
+    </block>
+  </demo-block>
+  <demo-block align="unset" title="Show number only">
+    <block>
       <dora-pagination defaultCurrent="1" total="5" mode="number">
         <view slot="prev">Prev</view>
         <view slot="next">Next</view>
       </dora-pagination>
-      <view class="page__sub-title">Point style</view>
+    </block>
+  </demo-block>
+  <demo-block align="unset" title="Point style">
+    <block>
       <dora-pagination defaultCurrent="1" total="5" mode="pointer">
         <view slot="prev">Prev</view>
         <view slot="next">Next</view>
       </dora-pagination>
-  </view>
-</view>
+    </block>
+  </demo-block>
+</demo-page>
